fix aside bg on mobile

--- a/public/admin/stylus/admin.styl
+++ b/public/admin/stylus/admin.styl
@@ -27,6 +27,9 @@ input[type="file"].form-control
 		height 100%
 		background $sidebar-bg
 
+@media (max-width: 767px)
+	#wrapper:before
+		display none
 
 
 #page-wrapper
