--- a/public/admin/stylus/mixins.styl
+++ b/public/admin/stylus/mixins.styl
@@ -23,3 +23,6 @@
 
 .word-break
 	word-break break-all
+	
+.display-in-b
+	display inline-block
